--- a/不同参数精度对比.html
+++ b/不同参数精度对比.html
@@ -85,7 +85,7 @@
                 yAxis: [
                     {
                         type: 'value',
-                        name: 'Precision',
+                        name: 'Accuracy',
                         nameLocation: 'center',
                         nameGap: 56,
                         nameTextStyle: {
