--- a/k_accuracy.html
+++ b/k_accuracy.html
@@ -67,7 +67,7 @@
                         },
                         // boundaryGap: 10,
                         boundaryGap: true,
-                        data: [2, 3, 4, 5, 6],
+                        data: [2, 3, 4, 5, 6, 7, 8, 9, 10],
                         axisTick: {
                             alignWithLabel: true,
                             show: true
@@ -119,7 +119,7 @@
                         lineStyle: {
                             width: 3
                         },
-                        data: [0.909, 0.938, 0.938, 0.938, 0.938]
+                        data: [0.909, 0.938, 0.938, 0.938, 0.938, 0.938, 0.938, 0.938, 0.938]
                     },
                     {
                         name: 'Beijing',
@@ -129,7 +129,7 @@
                         lineStyle: {
                             width: 3
                         },
-                        data: [0.788, 0.9, 0.9, 0.9, 0.9]
+                        data: [0.788, 0.9, 0.9, 0.9, 0.9, 0.9, 0.9, 0.9, 0.9]
                     },
                     {
                         name: 'Munich',
@@ -139,7 +139,7 @@
                         lineStyle: {
                             width: 3
                         },
-                        data: [0.828, 0.828, 0.828, 0.879, 0.879]
+                        data: [0.828, 0.828, 0.828, 0.879, 0.879, 0.879, 0.879, 0.879, 0.879]
                     }
                 ]
             };
