--- a/shape-descriptors-accuracy.html
+++ b/shape-descriptors-accuracy.html
@@ -27,8 +27,8 @@
                 },
                 legend: {
                     top: '57%',
-                    right: '8%',
-                    align: 'right',
+                    right: '7.5%',
+                    align: 'left',
                     width: '1%',
                     itemWidth: 40,
                     itemHeight: 10,
