--- a/map/geo-points-map.html
+++ b/map/geo-points-map.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <title>地址解析</title>
     <script src="./geo.js"></script>
+    <script src="./utils.js"></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
     <style>
@@ -28,8 +29,8 @@
             position: absolute;
             top: 0;
             right: 0;
-            background: #efefef;
-            padding: 10px;
+            background: rgba(255, 255, 255, 0.3);
+            padding: 6px;
             font-family: 'Open Sans', sans-serif;
         }
         #menu {
@@ -38,47 +39,184 @@
             padding: 10px;
             font-family: 'Open Sans', sans-serif;
         }
+        .overlay {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+        }
+        .overlay button {
+            font: 600 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+            background-color: #3386c0;
+            color: #fff;
+            display: inline-block;
+            margin: 0;
+            padding: 4px 8px;
+            border: none;
+            cursor: pointer;
+            border-radius: 2px;
+        }
+
+        .overlay button:hover {
+            background-color: #4ea0da;
+        }
     </style>
 </head>
 <body>
     <div id='map'></div>
+    <div class="overlay">
+        <button id="replay">Replay</button>
+    </div>
     <div class="them-wrapper">
         <select id="themSelect">
+            <option value="dark-v10">dark</option>
             <option value ="streets-v11">streets</option>
             <option value ="outdoors-v11">outdoors</option>
             <option value="light-v10">light</option>
-            <option value="dark-v10">dark</option>
             <option value="satellite-v9">satellite</option>
             <option value="satellite-streets-v11">satellite-streets</option>
+            <option value="navigation-preview-day-v4">navigation-preview-day</option>
+            <option value="navigation-preview-night-v4">navigation-preview-night</option>
+            <option value="navigation-guidance-day-v4">navigation-guidance-day</option>
+            <option value="navigation-guidance-night-v4">navigation-guidance-night</option>
         </select>
     </div>
     <script>
         mapboxgl.accessToken = 'pk.eyJ1IjoieWFuY29uZ3dlbiIsImEiOiJjaml4eWgxMnowNHY0M3BvMW96cDI1bWJ6In0.QA-bmCCquo-mziBfZ8KOIQ';
         var map = new mapboxgl.Map({
             container: 'map',
-            center: [108.3, 29], // starting position [lng, lat]
-            zoom: 3, // starting zoom
-            style: 'mapbox://styles/mapbox/streets-v11'
+            center: [106, 35],
+            zoom: 3,
+            style: 'mapbox://styles/mapbox/dark-v10'
         })
         var themSelect = document.getElementById('themSelect')
         themSelect.onchange = function(e) {
             map.setStyle('mapbox://styles/mapbox/' + e.target.value)
+            map.once('styledataloading', function() {
+                // setStyle 之后之前的图层和数据会被清除，需要重新添加
+                setTimeout(function() {
+                    addLayers()
+                    reset()
+                }, 1000)
+            })
         }
-        // 加载数据
-        fetch('./data.json')
-            .then(function(response) {
-                return response.json()
-            })
-            .then(function(data) {
-                console.log(data)
-                data.list.forEach(function(address) {
-                    geocoding(address)
-                        .then(function(location) {
-                            addMarker(location, address)
-                        })
-                })
-            })
+    </script>
 
+    <script src="https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v2.0.0/turf.min.js"></script>
+    <script>
+        var routeCoordinates = []
+        var routeteIndex = 0
+        var route = {
+            type: 'FeatureCollection',
+            features: []
+        }
+        var point = {
+            type: 'FeatureCollection',
+            features: [
+                {
+                    type: 'Feature',
+                    properties: {},
+                    geometry: {
+                        type: 'Point',
+                        coordinates: []
+                    }
+                }
+            ]
+        }
+
+        map.on('load', function() {
+            addLayers()
+            initRoute()
+
+            var btn = document.getElementById('replay')
+            btn.onclick = function() {
+                reset()
+            }
+        })
+
+        function addLayers() {
+            // 航线
+            map.addSource('route', {
+                type: 'geojson',
+                data: route
+            })
+            // 飞机
+            map.addSource('point', {
+                type: 'geojson',
+                data: point
+            })
+            // 设置 3 条重叠但样式不一样的 Line 来创造发光的航线
+            map.addLayer({
+                id: 'route',
+                source: 'route',
+                type: 'line',
+                paint: {
+                    'line-width': 6,
+                    'line-blur': 3,
+                    'line-opacity': 0.4,
+                    'line-color': '#007cbf'
+                }
+            })
+            map.addLayer({
+                id: 'route2',
+                source: 'route',
+                type: 'line',
+                paint: {
+                    'line-width': 3,
+                    'line-blur': 3,
+                    'line-opacity': 0.4,
+                    'line-color': '#009df2'
+                }
+            })
+            map.addLayer({
+                id: 'route3',
+                source: 'route',
+                type: 'line',
+                paint: {
+                    'line-width': 0.2,
+                    'line-blur': 1,
+                    'line-opacity': 1,
+                    'line-color': '#fafdff'
+                }
+            })
+            // 飞机
+            map.addLayer({
+                id: 'point',
+                source: 'point',
+                type: 'symbol',
+                layout: {
+                    'icon-image': 'airport-15',
+                    'icon-rotate': ['get', 'bearing'],
+                    'icon-rotation-alignment': 'map',
+                    'icon-allow-overlap': true,
+                    'icon-ignore-placement': true
+                }
+            })
+        }
+
+        // 初始化
+        function initRoute() {
+            fetch('./data.json')
+                .then(function(response) {
+                    return response.json()
+                })
+                .then(function(data) {
+                    var requests = []
+                    data.list.forEach(function(address, index) {
+                        requests.push(function() {
+                            return geocoding(address)
+                                .then(function(location) {
+                                    addMarker(location, address)
+                                    routeCoordinates[index] = [location.lng, location.lat]
+                                })
+                        })
+                    })
+                    multiRequest(requests, 5).then(function() {
+                        startFly(0)
+                    })
+                })
+        }
+        
+        // 调用百度接口进行位置解析
         function geocoding(address) {
             // 百度API跨域，代理转发一下
             var proxy = 'https://bird.ioliu.cn/v1?url='
@@ -89,6 +227,7 @@
                 })
                 .then(function(response) {
                     if (response.status === 0 && response.result) {
+                        // 国测局坐标系转 WGS2000 坐标系
                         return gcj2wgs(response.result.location)
                     } else {
                         throw Error('解析失败')
@@ -96,16 +235,82 @@
                 }).catch(function(e) {})
         }
 
+        // 添加 marker
         function addMarker(location, address) {
             var popup = new mapboxgl.Popup({
                     offset: 25,
                     closeButton: false,
                 })
-                .setText(address);
-            new mapboxgl.Marker()
+                .setText(address)
+            new mapboxgl.Marker({
+                scale: 0.6
+            })
                 .setLngLat(location)
                 .setPopup(popup)
                 .addTo(map);
+        }
+
+        // 航线
+        function startFly(index) {
+            if (index >= routeCoordinates.length - 1) {
+                return
+            }
+            point.features[0].geometry.coordinates = routeCoordinates[index]
+            var feature = {
+                type: 'Feature',
+                geometry: {
+                    type: 'LineString',
+                    coordinates: [routeCoordinates[index], routeCoordinates[index + 1]]
+                }
+            }
+            var lineDistance = turf.lineDistance(feature, 'kilometers')
+            var arc = []
+            var steps = Math.max(lineDistance / 10, 20)
+            for (var i = 0; i < lineDistance; i += lineDistance / steps) {
+                var segment = turf.along(feature, i, 'kilometers')
+                arc.push(segment.geometry.coordinates);
+            }
+            feature.geometry.coordinates = arc
+            route.features.push(feature)
+            map.getSource('route').setData(route)
+            animate(index, 0)
+        }
+
+        // 动画
+        function animate(routeIndex, pointIndex) {
+            var pointSource = map.getSource('point')
+            if (!(pointSource && route.features && route.features.length && route.features[routeIndex])) {
+                return
+            }
+            var lineFeature = route.features[routeIndex]
+            var steps = lineFeature.geometry.coordinates.length - 1
+            point.features[0].geometry.coordinates = lineFeature.geometry.coordinates[pointIndex]
+            // 根据航线计算角度
+            point.features[0].properties.bearing = turf.bearing(
+                turf.point(
+                    lineFeature.geometry.coordinates[
+                        pointIndex >= steps ? pointIndex - 1 : pointIndex
+                    ]
+                ),
+                turf.point(
+                    lineFeature.geometry.coordinates[
+                        pointIndex >= steps ? pointIndex : pointIndex + 1
+                    ]
+                )
+            )
+            map.getSource('point').setData(point)
+            if (pointIndex < steps) {
+                requestAnimationFrame(function() {
+                    animate(routeIndex, pointIndex + 1)
+                })
+            } else {
+                startFly(routeIndex + 1)
+            }
+        }
+
+        function reset() {
+            route.features = []
+            startFly(0)
         }
     </script>
 </body>
